bug  covers dooble dot

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -3,7 +3,7 @@
 }
 
 .content-covers {
-  background-image: url(./img/covers/ellipse_min.png);
+  background-image: url(../img/covers/ellipse_min.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -51,7 +51,7 @@
 
 @media screen and (min-width: 768px) {
   .content-covers {
-    background-image: url(./img/covers/elements_vectors-min.png);
+    background-image: url(../img/covers/elements_vectors-min.png);
     background-position: left;
   }
   .marquee {
